[package]
name = "necko3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }

url = "2.5"

alloy = { version = "1.6", features = ["full"] }
coins-bip32 = "0.13"
anyhow = "1"

bigdecimal = { version = "0.4", features = ["serde"] }

axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
uuid = { version = "1.20", features = ["v4"] }