[package]
name = "necko3"
version = "0.1.3"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
necko3-core = { git = "https://github.com/necko-moe/necko3-core.git" }

dotenvy = "0.15"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4"] }

utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }